# c_podstawy_programowania

./: CMakeLists.txt  doskonale.c  fibonacci.c  field.c  guesser.c  main.c  merge.c  najpierwsze.c  pointers.c  print_array.c  sasiedzi.c  silnia.c  silnia_duze.c  spirala.c  square.c  triangles.c
