cmake_minimum_required(VERSION 3.21)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(main main.c)
add_executable(silnia silnia.c)
add_executable(guesser guesser.c)
add_executable(doskonale doskonale.c)
add_executable(najpierwsze  najpierwsze.c)
add_executable(fibonacci fibonacci.c)
add_executable(merge merge.c)
add_executable(spirala spirala.c)
add_executable(pointers pointers.c)
add_executable(print_array print_array.c)
add_executable(silnia_duze silnia_duze.c)
add_executable(sasiedzi sasiedzi.c)
add_executable(field field.c)

